--- a/Week-2/card/src/App.css
+++ b/Week-2/card/src/App.css
@@ -1,16 +1,70 @@
 /*!     Card CSS     */
 
-.wrapper {
+/* .wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, min(130px));
     gap: 10px;
     margin-top: 50px;
-    margin-left: 10px;
+    margin-left: 5px;
     text-align: center;
-}
+} */
 
 .card {
-    background-color: blue;
+    display: flex;
+    /* flex-direction: column;
+    justify-content: space-between;
     border: 2px solid black;
+    border-radius: 10px;
+    background-color: red; */
     text-align: center;
+
+}
+
+.cardContainer-1 {
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: red;
+    width: 100px;
+    padding: 10px;
+    margin-top: 200px;
+    margin-left: 10px;
+    box-shadow: 0 5px 20px black;
+
+}
+
+.cardContainer-2 {
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: orange;
+    width: 100px;
+    padding: 10px;
+    margin-top: 200px;
+    margin-left: 5px;
+    box-shadow: 0 5px 20px black;
+}
+
+.cardContainer-3 {
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: yellow;
+  width: 100px;
+  padding: 10px;
+  margin-top: 200px;
+  margin-left: 5px;
+  box-shadow: 0 5px 20px black;
+}
+
+.cardContainer-4 {
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: green;
+  width: 100px;
+  padding: 10px;
+  margin-top: 200px;
+  margin-left: 5px;
+  box-shadow: 0 5px 20px black;
+}
+
+body {
+    background-color: #0005;
 }
