--- a/Week-2/my-app-2/src/App.css
+++ b/Week-2/my-app-2/src/App.css
@@ -11,10 +11,10 @@ body {
     background-color: #0005;
 }
 
-/* .App {
-  text-align: center;
+.App {
+    text-align: center;
 }
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
