--- a/Week-2/card/src/App.css
+++ b/Week-2/card/src/App.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius: 10px;
     /* background-color: red; */
     text-align: center;
