--- a/Week-2/card/src/App.css
+++ b/Week-2/card/src/App.css
@@ -1,4 +1,11 @@
 /*!     Card CSS     */
+.background-red {
+    background-color: red;
+}
+
+.background-blue {
+    background-color: blue;
+}
 
 .wrapper {
     display: grid;
