--- a/Week-2/card/src/App.css
+++ b/Week-2/card/src/App.css
@@ -1,32 +1,27 @@
 /*!     Card CSS     */
-.background-red {
-    background-color: red;
-}
-
-.background-blue {
-    background-color: blue;
-}
-
 .wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, min(130px));
     gap: 10px;
-    margin-top: 50px;
-    margin-left: 5px;
+    margin-top: 100px;
     text-align: center;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    /* border: 2px solid black; */
+    border: 2px solid black;
     border-radius: 10px;
-    /* background-color: red; */
-    text-align: center;
+    background-color: lightblue;
 }
 
-.cardContainer-1 {
+.cardBody {
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 30px;
+    box-shadow: 0 10px 50px 0px black;
+}
+
+body {
+    background-color: #0005;
+}
+
+/* .cardContainer-1 {
     border: 2px solid black;
     border-radius: 10px;
     background-color: red;
@@ -35,9 +30,9 @@
     margin-top: 200px;
     margin-left: 10px;
     box-shadow: 0 5px 20px black;
-}
+} */
 
-.cardContainer-2 {
+/* .cardContainer-2 {
     border: 2px solid black;
     border-radius: 10px;
     background-color: orange;
@@ -68,8 +63,4 @@
     margin-top: 200px;
     margin-left: 5px;
     box-shadow: 0 5px 20px black;
-}
-
-body {
-    background-color: #0005;
-}
+} */
