--- a/Week-4/todo-list/src/App.css
+++ b/Week-4/todo-list/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+h1 {
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: rgba(128, 128, 128, 0.568);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#todo-list {
+    width: 500px;
+    margin: 60px auto;
+}
+form,
+.todo {
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: lightgreen;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+}
+form {
+    display: flex;
+    background-color: #0005;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+form input {
+    border-radius: 5px;
+    padding: 4px 8px;
+    flex-grow: 1;
+    margin-right: 16px;
+}
+.todo {
+    display: flex;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.edit-btn {
+    border: 1px solid black;
+    color: rgb(139, 3, 3);
+    background-color: rgb(39, 122, 39);
+    font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.delete-btn {
+    border: 1px solid black;
+    color: rgb(2, 2, 2);
+    background-color: rgb(241, 4, 4);
+    font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    font-size: 16px;
+    background-color: rgb(18, 129, 3);
+    color: black;
+    font-weight: bold;
+    border-radius: 8px;
+    border: 1px solid black;
+    padding: 8px 16px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: rgb(187, 184, 2);
+    color: black;
+    font-weight: bold;
+}
+button:active {
+    background-color: rgb(27, 214, 2);
+}
+button:focus {
+    outline: 0;
+}
+input[type="text"] {
+    font-size: 20px;
+    font-family: monospace;
+    background-color: antiquewhite;
+}
+.todo input[type="checkbox"] {
+    transform: scale(1.8) translateY(1px);
+    margin: 0 16px 0 0;
+    cursor: pointer;
+}
+.todo-text input {
+    padding: 4px;
+}
+.todo-text {
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+}
+.todo-completed {
+    display: flex;
+    margin: 10px 0;
+}
+.todo-actions {
+    display: flex;
+    justify-content: space-between;
 }
