--- a/Week-3/dice/src/App.css
+++ b/Week-3/dice/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    color: rgb(158, 2, 2);
+    font-size: 42px;
+    border: 2px solid black;
+    border-top: none;
+    border-radius: 20px;
+    padding: 2px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h5 {
+    color: rgb(158, 2, 2);
+    font-size: 22px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+    background-color: rgba(222, 184, 135, 0.637);
 }
